.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glacctclone__c.object
<CustomObject>
    <description>glacctclone__c</description>
    <fields>
        <fullName>rstkf__glacctclone_fromglacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Account #</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Clone Chart of Accounts</relationshipLabel>
        <relationshipName>glacctclones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glacctclone_fromglcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Clone Chart of Accounts</relationshipLabel>
        <relationshipName>glacctclones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glacctclone_thruglacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Through Account #</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Clone Chart of Accounts (Through Account #)</relationshipLabel>
        <relationshipName>glacctclones01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glacctclone_toglcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Clone Chart of Accounts (To Company)</relationshipLabel>
        <relationshipName>glacctclones01</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clone Chart of Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clone Chart of Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>